<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.actividad</groupId>
	<artifactId>CEA_Java</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>CEA_Java</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
                <!-- Spring Boot starters -->
  
                <dependency>
                  <groupId>org.springframework.boot</groupId>
                  <artifactId>spring-boot-starter-data-jpa</artifactId>
                </dependency>

                <!-- SQL Server -->
                <dependency>
                  <groupId>com.microsoft.sqlserver</groupId>
                  <artifactId>mssql-jdbc</artifactId>
                </dependency>

                <!-- Flyway -->
                <dependency>
                    <groupId>org.flywaydb</groupId>
                    <artifactId>flyway-core</artifactId>
                  </dependency>
                  <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-sqlserver -->
                <dependency>
                    <groupId>org.flywaydb</groupId>
                    <artifactId>flyway-sqlserver</artifactId>
                </dependency>

                <dependency>
                    <groupId>io.jsonwebtoken</groupId>
                    <artifactId>jjwt-api</artifactId>
                    <version>0.11.5</version>
                </dependency>
                <dependency>
                    <groupId>io.jsonwebtoken</groupId>
                    <artifactId>jjwt-impl</artifactId>
                    <version>0.11.5</version>
                    <scope>runtime</scope>
                </dependency>
                <dependency>
                    <groupId>io.jsonwebtoken</groupId>
                    <artifactId>jjwt-jackson</artifactId>
                    <version>0.11.5</version>
                    <scope>runtime</scope>
                </dependency>
                
                <!-- Quita o comenta esta dependencia -->
                <!--
                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-security</artifactId>
                </dependency>
                -->


                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-thymeleaf</artifactId>
                </dependency>


	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
                        <plugin>
                            <groupId>org.jacoco</groupId>
                            <artifactId>jacoco-maven-plugin</artifactId>
                            <version>0.8.12</version> <!-- o superior -->
                            <executions>
                              <execution>
                                <goals><goal>prepare-agent</goal></goals>
                                <configuration>
                                  <excludes>
                                    <exclude>java/**</exclude>
                                    <exclude>javax/**</exclude>
                                    <exclude>jdk/**</exclude>
                                    <exclude>sun/**</exclude>
                                    <exclude>com/sun/**</exclude>
                                  </excludes>
                                  <propertyName>surefireArgLine</propertyName>
                                </configuration>
                              </execution>
                              <execution>
                                <id>report</id>
                                <phase>test</phase>
                                <goals><goal>report</goal></goals>
                              </execution>
                              <execution>
                                <id>check</id>
                                <phase>verify</phase>
                                <goals><goal>check</goal></goals>
                                <configuration>
                                  <rules>
                                    <rule>
                                      <element>BUNDLE</element>
                                      <limits>
                                        <limit>
                                          <counter>INSTRUCTION</counter>
                                          <value>COVEREDRATIO</value>
                                          <minimum>0.70</minimum>
                                        </limit>
                                      </limits>
                                      <includes>
                                        <include>com.actividad.Domain.*</include>
                                      </includes>
                                    </rule>
                                  </rules>
                                </configuration>
                              </execution>
                            </executions>
                          </plugin>

                          <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <version>3.2.5</version>
                            <configuration>
                              <argLine>${surefireArgLine} -XX:+EnableDynamicAgentLoading</argLine>
                            </configuration>
                          </plugin>

		</plugins>
	</build>

</project>
